fix(agent): close the same permission race on node keys and secret files
AgentMain wrote a node's own bootstrapped/rotated leaf private key, and
a secret-backed vessel file mount's rendered value, then restricted
permissions afterward -- the same write-then-restrict race, on the two
places a node ever puts secret material on disk. Both now go through
OwnerOnlyFiles; the vessel-file path also gains a portable (non-POSIX)
fallback OwnerOnlyFiles' own bespoke restrictToOwner used to provide.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01H6uE8x62ZJ3xtXcAmS5qCc